Fixed Spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -114,11 +114,16 @@ h2{
   background-color: white;
   z-index: 500;
 }
+
+nav{float:right;}
+
 .logo{
   flex-grow: 2;
 }
 
 .logo h1{
+  position: absolute;
+  left: 2px;
   margin: 0;
   padding-top: 8px;
   padding-left: 20px;
@@ -344,8 +349,6 @@ h2{
 .title{
   color: #007bff;
   flex-grow: 1;
-  width: 100px;
-  margin-left: 5%;
 }
 
 .container-content{
@@ -395,4 +398,23 @@ footer p{
 
 .footer-link a:hover{
   color: #007bff;
+}
+
+@media screen and (max-width: 1025px) {
+  .logo h1{
+    color: #404040;
+  }
+  .title{
+    margin-left: 2%;
+  }
+  body {
+    background-color: blue;
+    color: white;
+  }
+}
+@media screen and (max-width: 600px) {
+  body {
+    background-color: olive;
+    color: white;
+  }
 }
